# sshfling

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  CHANGELOG.md  LICENSE  Makefile  README.md  compose.client.yml  compose.server.yml  flake.nix  index.html  install.sh  security_best_practices_report.md  sshfling-repo-fingerprint.txt  sshfling-repo.asc  sshfling-repo.gpg
.codex/: config.toml
.github/workflows/: container-image-tests.yml  cross-os-validation.yml  github-packages.yml  java-package.yml  language-runtime-validation.yml  official-distro-drafts.yml  package-install-tests.yml  public-package-web.yml  release-packages.yml
apt/: InRelease  Packages  Release  Release.gpg  SHA256SUMS  sshfling_0.1.16_all.deb
debian/: README.source  changelog  control  copyright  manpages  rules  sshfling.1  sshfling.lintian-overrides  sshfling.postinst  sshfling.postrm  watch
debian/tests/: control  smoke
debian/upstream/: metadata
docs/: ai-temporary-access.md  build-targets.md  codex-enterprise-workflow.md  compliance-mapping.md  enterprise-readiness.md  firewall-os-versions.md  firewall-os.md  install-uninstall.md  language-deployment-support.md  language-external-blockers.md  language-support.md  libraries.md  official-distro-readiness.md  official-distro-submission.md  openssh-dependencies.md  release-checklist.md  release-evidence.md  release-signing-and-distro-handoff.md  repos.md  threat-model.md
docs/wiki/: Enterprise-Readiness.md  Home.md  Operations-Runbook.md  Package-Publishing.md  Security-and-Compliance.md
downloads/: SHA256SUMS  index.html
native/: sshfling-linux-account  sshfling-unix-identity
packaging/: build-community-manifests.sh  build-deb.sh  build-domain-languages.sh  build-dotnet.sh  build-functional-languages.py  build-functional-languages.sh  build-go.sh  build-java.sh  build-msi.ps1  build-native-libraries.sh  build-node.sh  build-perl.sh  build-php.sh  build-pkg.sh  build-public-web.sh  build-python.sh  build-rpm.sh  build-ruby.sh  build-rust.sh  build-scripting-languages.sh  build-systems-languages.sh  build-web-language-consumers.sh  copy-templates.sh  list-language-release-artifacts.sh  policy.json  prepare-official-distro-submission.sh  resolve-version.sh  validate-official-distro-drafts.sh  validate-official-distro-submission.sh  verify-public-web.sh  version.sh
packaging/awk/: cli.awk  package-metadata.json  sshfling  sshfling.awk
packaging/beam-languages/: languages.tsv
packaging/domain-languages/: README.md  manifest.tsv
packaging/fedora/: rpmlint.toml  sshfling.spec
packaging/functional-languages/: languages.tsv
packaging/functional-languages/haskell/: cabal.project  sshfling.cabal
packaging/functional-languages/haskell/app/: Main.hs
packaging/functional-languages/haskell/src/: SSHFling.hs
packaging/functional-languages/haskell/test/: Consumer.hs
packaging/functional-languages/ocaml/: dune  dune-project  sshfling.opam
packaging/functional-languages/ocaml/src/: dune  sshfling.ml  sshfling.mli
packaging/functional-languages/ocaml/test/: consumer.ml  dune
packaging/functional-languages/scheme/: Makefile.am  Makefile.in  configure  configure.ac
packaging/functional-languages/scheme/module/: sshfling.scm.in
packaging/functional-languages/scheme/test/: consumer.scm
packaging/go/: go.mod  sshfling.go  sshfling_test.go
packaging/guix-scheme/: package-metadata.json  sshfling-package.scm  sshfling.scm
packaging/java/: build.gradle.kts  pom.xml  settings.gradle.kts
packaging/lua/: package-metadata.json  sshfling-0.0.0-1.rockspec
packaging/native/: CMakeLists.txt
packaging/native/cmake/: SSHFlingConfig.cmake.in  sshfling.pc.in
packaging/native/consumers/c/: CMakeLists.txt  main.c
packaging/native/consumers/c-static/: CMakeLists.txt
packaging/native/consumers/cpp/: CMakeLists.txt  main.cpp
packaging/native/include/sshfling/: sshfling.h  sshfling.hpp
packaging/native/src/: main.c  sshfling.c
packaging/node/: index.d.ts  index.js  package.json
packaging/perl/: Makefile.PL
packaging/php/: composer.json
packaging/python/: pyproject.toml
packaging/python/src/sshfling/: __init__.py
packaging/ruby/: sshfling.gemspec
packaging/rust/: Cargo.toml  build.rs
packaging/rust/src/: lib.rs  main.rs
packaging/scientific-languages/: languages.tsv
packaging/sed/: package-metadata.json  sshfling-version.sed
packaging/systems-languages/: contract.toml  packages.tsv
packaging/systems-languages/objective-c/: CMakeLists.txt
packaging/systems-languages/objective-c/consumers/: main.m
packaging/systems-languages/objective-c/include/SSHFling/: SSHFling.h
packaging/systems-languages/objective-c/src/: SSHFling.m  main.m
packaging/tcl/: package-metadata.json  pkgIndex.tcl  sshfling.tcl
production/: fling-session  sshfling-login-shell  sshfling-session
scripts/: create-network.sh  generate-ssh-key.sh  install-local.sh  uninstall-local.sh
ssh-client/: Dockerfile  entrypoint.sh
ssh-server/: Dockerfile  entrypoint.sh  limited-session.sh  sshd_config
systemd/: flingd.env.example  flingd.service  sshfling-prune.service  sshfling-prune.timer  sshflingd.env.example  sshflingd.service
tests/cross-os/: validate-cli.ps1  validate-cli.sh  validate-local-install.sh  validate-native-linux-account.sh  validate-native-login-shell.sh  validate-native-session-policy.sh  validate-native-unix-identity.sh
tests/docker/: Dockerfile.production  run-alpine-functions.sh  run-container-image-tests.sh  run-production-test.sh
tests/firewall-os/: validate-freebsd-firewall.sh
tests/release/: test_language_deployment_matrix.py  test_language_release_artifacts.py  test_official_distro_lint.py  (+8 more)
tools/: generate_enterprise_release_readiness.py  generate_language_deployment_matrix.py  generate_language_support_matrix.py  generate_release_evidence.py  official_distro_readiness.py  provision-promoted-language-runtimes.sh  provision-release-scanners.sh  release_matrix_validate.py  release_security_scan.py  validate_official_distro_lint.py  validate_promoted_language_evidence.py  workflow_static_check.py
(+262 files in other folders)
