(install
 (package sshfling)
 (section lib)
 (files
  (runtime/templates/.env.example as runtime/templates/.env.example)
  (runtime/templates/LICENSE as runtime/templates/LICENSE)
  (runtime/templates/README.md as runtime/templates/README.md)
  (runtime/templates/compose.client.yml as runtime/templates/compose.client.yml)
  (runtime/templates/compose.server.yml as runtime/templates/compose.server.yml)
  (runtime/templates/secrets/.gitkeep as runtime/templates/secrets/.gitkeep)
  (runtime/templates/ssh-client/Dockerfile as runtime/templates/ssh-client/Dockerfile)
  (runtime/templates/ssh-server/Dockerfile as runtime/templates/ssh-server/Dockerfile)
  (runtime/templates/ssh-server/sshd_config as runtime/templates/ssh-server/sshd_config)
  (runtime/templates/systemd/sshfling-prune.service as runtime/templates/systemd/sshfling-prune.service)
  (runtime/templates/systemd/sshfling-prune.timer as runtime/templates/systemd/sshfling-prune.timer)
  (runtime/templates/systemd/sshflingd.env.example as runtime/templates/systemd/sshflingd.env.example)
  (runtime/templates/systemd/sshflingd.service as runtime/templates/systemd/sshflingd.service)))

(install
 (package sshfling)
 (section libexec)
 (files
  (runtime/sshfling.py as runtime/sshfling.py)
  (runtime/templates/native/sshfling-linux-account as runtime/templates/native/sshfling-linux-account)
  (runtime/templates/native/sshfling-unix-identity as runtime/templates/native/sshfling-unix-identity)
  (runtime/templates/production/sshfling-login-shell as runtime/templates/production/sshfling-login-shell)
  (runtime/templates/production/sshfling-session as runtime/templates/production/sshfling-session)
  (runtime/templates/scripts/create-network.sh as runtime/templates/scripts/create-network.sh)
  (runtime/templates/scripts/generate-ssh-key.sh as runtime/templates/scripts/generate-ssh-key.sh)
  (runtime/templates/scripts/install-local.sh as runtime/templates/scripts/install-local.sh)
  (runtime/templates/scripts/uninstall-local.sh as runtime/templates/scripts/uninstall-local.sh)
  (runtime/templates/ssh-client/entrypoint.sh as runtime/templates/ssh-client/entrypoint.sh)
  (runtime/templates/ssh-server/entrypoint.sh as runtime/templates/ssh-server/entrypoint.sh)
  (runtime/templates/ssh-server/limited-session.sh as runtime/templates/ssh-server/limited-session.sh)))
