opam-version: "2.0"
name: "sshfling"
version: "0.0.0"
synopsis: "OCaml launcher for the bundled SSHFling runtime"
maintainer: ["GRWLX"]
authors: ["GRWLX"]
license: "LicenseRef-Proprietary"
homepage: "https://github.com/GRWLX/sshfling"
bug-reports: "https://github.com/GRWLX/sshfling/issues"
dev-repo: "git+https://github.com/GRWLX/sshfling.git"
depends: [
  "ocaml" {>= "4.14"}
  "dune" {>= "3.11"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
